[package]
name = "ski"
description = "An interpreter that evaluates λ-calculations step by step"
version = "0.2.0"
authors = ["Mitsui <todays.mitsui@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.55"
console_error_panic_hook = "0.1.7"
anyhow = "1.0"
combine = "4.6.6"
regex = "1.9.1"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"

wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.55"
features = ["console", "Storage", "Window"]

[dev-dependencies]
rand = "0.8.5"
wasm-bindgen-test = "0.3.28"
futures = "0.3.18"
wasm-bindgen-futures = "0.4.28"

[dependencies.tuber]
path = "../tuber"
