[package]
name = "ski2"
description = "An interpreter that evaluates λ-calculations step by step"
version = "0.2.0"
authors = ["Mitsui <todays.mitsui@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"
console_error_panic_hook = "0.1.7"
anyhow = "1.0"
serde = { version = "1.0.214", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

wee_alloc = { version = "0.4.2", optional = true }
tsify-next = "0.5.4"

[dependencies.web-sys]
version = "0.3.72"
features = ["console", "Storage", "Window"]

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
futures = "0.3.18"
wasm-bindgen-futures = "0.4.28"

[dependencies.tuber]
path = "../tuber"
