[package]
name = "ski3"
version = "0.1.0"
authors = ["todays_mitsui <todays_mitsui@hatena.ne.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
tsify-next = "0.5.4"
serde = "1.0.214"
js-sys = "0.3.72"
serde-wasm-bindgen = "0.6.5"

[dependencies.tuber]
path = "../tuber"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
lto = true
opt-level = "z"
